--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -285,7 +285,14 @@ h3 {
     overflow: hidden;
     position: relative;
 }
-.video-container video {
+.video-container-2 {
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    display: none;
+}
+.video-container .promo-video, .video-container-2 .promo-video {
   width: 100%;
   height: auto;
   position: relative;
@@ -333,7 +340,7 @@ h3 {
 .music-widget:hover {
   cursor: pointer;
   color: black;
-  box-shadow: 0px 0px 15px $pink;
+  box-shadow: 0px 0px 15px 7px $pink;
 }
 .stream-icon {
   width: 20%;
@@ -377,6 +384,28 @@ footer {
   opacity: 0;
   @include animate(fade, 3s);
   @include delay-animation(0.5s);
+}
+.play-button {
+  padding: 10px 10px 10px 20px;
+  border-radius: 10px;
+  z-index: 3;
+  border: 2px solid $pink;
+  box-shadow: none;
+  background: black;
+  color: $white;
+  letter-spacing: 10px;
+  font-size: 10px;
+  margin-top: 30%;
+  display: none;
+}
+.play-button-container {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 74px;
+  width: 100%;
+  height: 89%;
 }
 
 /*
@@ -553,8 +582,15 @@ MEDIA QUERIES
     top: 66px;
     height: 75%;
   }
+  .play-button-container {
+    top: 66px;
+    height: 75%;
+  }
   .video-container video {
-    margin-top: 66px;
+    margin-top: 66px !important;
+  }
+  .video-container-2 img {
+    margin-top: 66px !important;
   }
   nav {
     position: static;
